# mnist

./: .gitignore  LICENSE  Modelling_mnist.ipynb  README.md  pyproject.toml  util.py
